--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^3.1.1
   cloud_firestore: ^5.0.2
   gap: ^3.0.1
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
