--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,10 +46,15 @@ dependencies:
   google_sign_in: ^6.2.1
   firebase_auth: ^5.1.2
   google_fonts: ^6.2.1
+  freezed_annotation: ^2.4.4
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.7
+  freezed: ^2.4.6
+  json_serializable: ^6.7.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
